syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.common.model.dto.request.message";
option java_multiple_files = true;
option swift_prefix = "";

message UpdateTypingStatusRequest {
    bool is_group_message = 1;
    int64 to_id = 2;
}